0.29
 - Change minimal dependency (0.04) to Error::Pure::Output::ANSIColor to
   fix ansi colors in Print.
 - Fix EXAMPLEs in Die doc.
 - Fix minimal dependency for List::Util.
 - Improve SYNOPSIS section by common usage with Error::Pure.
 - Rewrite example files to better names.

0.28 2022-12-14T08:39:59+01:00
 - Fix links in doc.
 - Improve SYNOPSIS section in doc.
 - Move from List::MoreUtils to List::Util.
 - Rewrite SUBROUTINES section in doc to use =head2.

0.27 2022-12-11T18:02:01+01:00
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Move bugtracker to github.
 - Update author name.
 - Update author github repository.
 - Update copyright years.
 - Update Module::Install to 1.19 version.

0.26 2017-11-24T11:30:49+01:00
 - In 0.01 version was Error::Pure::AnsiColor::PrintVar with 0.25 version.
   Then grow version to bigger.

0.03 2017-11-24T11:01:46+01:00
 - Fix signature.

0.02 2017-04-02T19:15:58+02:00
 - Fix #120864 - Makefile.PL fails with no '.' in @INC.

0.01 2017-03-08T15:38:59+01:00
 - First version.